Added function to handle single files